# cabot

./: .gitignore  Dockerfile  docker-compose-base.yml  docker-compose-test.yml  pyproject.toml  requirements-plugins.txt
cabot/: __init__.py  celery.py  celeryconfig.py  context_processors.py  rest_urls.py  settings.py  settings_ldap.py  settings_utils.py  urls.py  version.py  wsgi.py
cabot/cabotapp/: admin.py  alert.py  apps.py  calendar.py  graphite.py  jenkins.py  tasks.py  views.py
cabot/cabotapp/migrations/: 0001_initial_squashed_0007_statuscheckresult_consecutive_failures.py  0008_alter_alertplugin_options_and_more.py
cabot/cabotapp/models/: base.py  jenkins_check_plugin.py
cabot/cabotapp/templatetags/: extra.py
cabot/cabotapp/tests/: test_plugin_settings.py  test_setup.py  test_urlprefix.py  tests_basic.py  tests_icmp_check.py  tests_jenkins.py
cabot/cabotapp/tests/fixtures/cabot_check_skeleton/: plugin.py
cabot/templates/: base_public.html
cabot/templates/cabotapp/: statuscheck_confirm_delete.html
conf/: test.env
